--- a/index.html
+++ b/index.html
@@ -107,8 +107,13 @@
 
         <div class="img-sobre">
           <figure>
-            <img src="assets/Img-Sobre.png" alt="Maria Leilane – desenvolvedora e estudante de tecnologia" />
-            <figcaption>Foto de Maria Leilane, analista de sistemas e desenvolvedora</figcaption>
+            <img
+              src="assets/Img-Sobre.png"
+              alt="Maria Leilane – desenvolvedora e estudante de tecnologia"
+            />
+            <figcaption>
+              Foto de Maria Leilane, analista de sistemas e desenvolvedora
+            </figcaption>
           </figure>
         </div>
       </section>
@@ -118,11 +123,156 @@
 
         <div class="img-skills">
           <figure>
-            <img src="assets/skills.png" alt="Ícones das minhas habilidades técnicas" />
-            <figcaption>Ícones representando as minhas principais habilidades técnicas</figcaption>
+            <img
+              src="assets/skills.png"
+              alt="Ícones das minhas habilidades técnicas"
+            />
+            <figcaption>
+              Ícones representando as minhas principais habilidades técnicas
+            </figcaption>
           </figure>
         </div>
-        
+      </section>
+
+      <section id="projetos" class="tela-projetos">
+        <h2>Laboratório de Códigos: Projetos</h2>
+
+        <div class="container-projetos">
+          <article class="projeto1">
+            <figure>
+              <img src="assets/projeto1.png" alt="Imagem do Projeto 1" />
+              <figcaption>BookHub - Gerenciador de Leituras</figcaption>
+            </figure>
+
+            <p>
+              Aplicativo em C# com WinForms para organização de livros físicos.
+              Inclui login, cadastro e acervo.
+            </p>
+            <a href="#" class="botao-saiba-mais">Saiba Mais</a>
+          </article>
+
+          <article class="projeto2">
+            <figure>
+              <img src="assets/projeto1.png" alt="Imagem do Projeto 1" />
+              <figcaption>Projeto 2</figcaption>
+            </figure>
+
+            <p>
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Hic
+              asperiores voluptates eveniet, voluptatibus nemo excepturi odio
+              laboriosam optio aspernatur fuga, numquam veniam, consequuntur sit
+              blanditiis molestiae vero dolorem earum a!
+            </p>
+            <a href="#" class="botao-saiba-mais">Saiba Mais</a>
+          </article>
+
+          <article class="projeto3">
+            <figure>
+              <img src="assets/projeto1.png" alt="Imagem do Projeto 1" />
+              <figcaption>Projeto 3</figcaption>
+            </figure>
+
+            <p>
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Hic
+              asperiores voluptates eveniet, voluptatibus nemo excepturi odio
+              laboriosam optio aspernatur fuga, numquam veniam, consequuntur sit
+              blanditiis molestiae vero dolorem earum a!
+            </p>
+            <a href="#" class="botao-saiba-mais">Saiba Mais</a>
+          </article>
+
+          <article class="projeto4">
+            <figure>
+              <img src="assets/projeto1.png" alt="Imagem do Projeto 1" />
+              <figcaption>Projeto 4</figcaption>
+            </figure>
+
+            <p>
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Hic
+              asperiores voluptates eveniet, voluptatibus nemo excepturi odio
+              laboriosam optio aspernatur fuga, numquam veniam, consequuntur sit
+              blanditiis molestiae vero dolorem earum a!
+            </p>
+            <a href="#" class="botao-saiba-mais">Saiba Mais</a>
+          </article>
+
+          <article class="projeto5">
+            <figure>
+              <img src="assets/projeto1.png" alt="Imagem do Projeto 1" />
+              <figcaption>Projeto 5</figcaption>
+            </figure>
+
+            <p>
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Hic
+              asperiores voluptates eveniet, voluptatibus nemo excepturi odio
+              laboriosam optio aspernatur fuga, numquam veniam, consequuntur sit
+              blanditiis molestiae vero dolorem earum a!
+            </p>
+            <a href="#" class="botao-saiba-mais">Saiba Mais</a>
+          </article>
+
+          <article class="projeto6">
+            <figure>
+              <img src="assets/projeto1.png" alt="Imagem do Projeto 1" />
+              <figcaption>Projeto 6</figcaption>
+            </figure>
+
+            <p>
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Hic
+              asperiores voluptates eveniet, voluptatibus nemo excepturi odio
+              laboriosam optio aspernatur fuga, numquam veniam, consequuntur sit
+              blanditiis molestiae vero dolorem earum a!
+            </p>
+            <a href="#" class="botao-saiba-mais">Saiba Mais</a>
+          </article>
+        </div>
+      </section>
+
+      <section id="contato" class="tela-contato">
+        <h2>Entre em contato</h2>
+        <div class="conteudo-contato">
+          <div class="texto-contato">
+            <h3>Se interessou pelo meu trabalho ou tem um projeto em mente?</h3>
+
+            <p>
+              <strong>Estou a um clique de distância!</strong> Seja para tirar
+              dúvidas, compartilhar sugestões ou discutir oportunidades, ficarei
+              feliz em ajudar.
+            </p>
+            <p>
+              Deixe sua mensagem no formulário ao lado, e responderei o mais
+              rápido possível.
+            </p>
+            <p>Vamos conversar e descobrir como posso contribuir!</p>
+          </div>
+
+          <form
+            action="link servidor do form"
+            method="post"
+            aria-label="Formulário de contato">
+            <div class="campo-form">
+              <label for="nome">Nome:</label>
+              <input type="text" id="nome" name="nome" required />
+            </div>
+
+            <div class="campo-form">
+              <label for="email">E-mail:</label>
+              <input type="email" id="email" name="email" required />
+            </div>
+
+            <div class="campo-form">
+              <label for="mensagem">Mensagem:</label>
+              <textarea
+                id="mensagem"
+                name="mensagem"
+                rows="5"
+                required
+              ></textarea>
+            </div>
+
+            <button type="submit">Enviar</button>
+          </form>
+        </div>
       </section>
     </main>
   </body>
